--- a/deprecated/JDS_response.tex
+++ b/deprecated/JDS_response.tex
@@ -147,6 +147,13 @@ I hope that the text is now perfectly clear and concise.
 \textit{The authors need to better articulate the specific contribution of their work. The paper appears to be an updated application of previous studies, particularly those by Bolch et al. (2022). However, the novelty of the current study is not sufficiently clear. For example, while the authors highlight the imputation of national growth rates and the use of a poverty line aligned with SDG1, these aspects are not sufficiently emphasized or contextualized within the broader literature. How does this paper advance the field beyond being an update? Does it offer new insights into the policy implications of SDG1? Are the results of the scenarios robust to different assumptions about economic growth or redistribution? These points should be explicitly addressed to establish the paper's unique contribution. }~\\
 
 response TODO
+
+end of section ``Data''
+This assumption allows separating the effects of growth alone from those of a change in the income distribution. 
+
+end of first paragraph of Section ``The effect of balanced growth''
+In Supplementary Material, I show that the assumption of balanced growth has little effect on the poverty estimates compared to an alternative assumption where national inequality evolves just as in the recent past. This is because inequality has been quite stable over the last years of data, with two thirds of percentile shares growing or contracting by less than 1\% per year.
+
 ~\\ ~\\
 
 \textit{The literature review needs significant improvement. In the last paragraph of the introduction, the authors briefly mention that their work is related to studies on global income distribution but fail to explain how and why. In addition, I wonder how do the scenarios modeled in this paper compare with similar exercises in the literature? Are there methodological or theoretical advancements introduced here? Strengthening the link to prior research will help readers understand the relevance and placement of the study within the broader academic debate. }~\\
