--- a/paper/SM.tex
+++ b/paper/SM.tex
@@ -133,9 +133,15 @@
 \sloppy
 \maketitle
 
-
+\tableofcontents
+\clearpage
 \listoftables
 \listoffigures
+
+\clearpage
+\section{Unbalanced growth}
+
+In our main specification, we assume that each percentile a country's income (or consumption) distribution obtains the same share of national income in 2030 than it did in the last survey year. In this section, we explore an alternative assumption that extends the recent national trends in inequality. For each country, I consider the last survey that is at least five years older than the last survey year. In 54\% of cases, this older survey is 5 years older, while in 40\% of cases, it is 6 to 10 years older. Then, for each national percentile, I compute the difference in income share between these two survey years and I extend the annual evolution in income shares up to 2030.\footnote{To handle the few cases where the average income in a given percentile became negative or lower than the previous percentile, I re-order the percentiles and impose a minimum income of zero.} 
 
 \clearpage
 \section{Additional figures}
