--- a/tables/poverty.tex
+++ b/tables/poverty.tex
@@ -11,6 +11,7 @@ Trend (2014--2019) & 6.2 & 14.4 & 34.5 & 66.2 & 0.21 & 0.87 & 4.29 & 30.64\\
 Max(Trend, 0) & 6.3 & 14.2 & 34.3 & 66.4 & 0.19 & 0.81 & 4.16 & 30.25\\
 Autoregressive projection & 6.2 & 15.2 & 36.8 & 65.5 & 0.17 & 0.84 & 4.64 & 32.02\\
 3\% growth & 5.2 & 15.2 & 37.5 & 68.2 & 0.14 & 0.75 & 4.38 & 31.20\\
+3\% unbalanced growth & 5.1 & 15.1 & 37.5 & 67.7 & 0.19 & 0.83 & 4.48 & 31.83\\
 7\% growth & 2.2 & 8.5 & 25.5 & 59.5 & 0.05 & 0.29 & 1.93 & 18.07\\
 7\% growth since 2016 & 1.1 & 3.1 & 15.3 & 51.3 & 0.01 & 0.08 & 0.74 & 10.15\\
 \bottomrule
